Fix styling and jumping behaviour for mentor journal_date.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,6 +70,11 @@ body { }
   z-index: 2;
 }
 
+// Position mentor journal date picker
+#mentor_journal_date {
+  padding-top: 20px;
+}
+
 // Set default height for textareas
 textarea {
   min-height: 10em;
